// Vitest Snapshot v1, https://bun:test.dev/guide/snapshot.html

exports[`compute Objekt -- extra properties 1`] = `
"{
  a: "a",
  b: "b",
  c: "c"
}: class {
  a: String
  b: String
  c: String
}"
`;

exports[`compute Objekt -- prefilled 1`] = `
"{
  a: "a",
  b: "b",
  c: "c"
}: class {
  a: String
  b: String = "b"
  c: String
}"
`;

exports[`compute Objekt 1`] = `
"{
  a: "a",
  b: "b",
  c: "c"
}: class {
  a: String
  b: String
  c: String
}"
`;

exports[`compute Objket -- direct 1`] = `
"{
  a: "c",
  b: "d"
}: class {
  a: String = "c"
  b: String = "d"
}"
`;
